[REFACTOR] Removed URL and remove public modifier